Fluff

Version : 1.42
Date : 26 02 2014

script/
	fluff_heatmap.py :
		Pearson as distance function.
		Multiprocessing.
		Try to identify dynamics by extending 1 kb up/down stream, just for clustering
		and display the data with the default settings
	Warning when using too many data (Issue: #17).
		If there is a gene name in BED file will be added to
		'_clusters.bed' file (Issue: #16).
		Get reads matrix count as an output ('_readcount.txt') (Issue:
		#18).
		Fixed bugs.
		Fixed clusters numbers
	fluff_bandplot.py :
		"_clusters.bed" files with/without gene name can be used to develop bandplots
	fluff_profile.py : 

fluff/
	fluffio.py :
		If there is a gene name in BED file will be added to 
		'_clusters.bed' file (Issue: #16).
		Fixed bugs.
	color.py : 
	config.py :
		Global version added.
	plot.py : 
	util.py : 
	