@@ -1,2 +1,29 @@
 ### CONSTANTS ###
 FL_VERSION = "1.43"
+
+######## HEATMAP #############
+DEFAULT_BINSIZE = 100
+DEFAULT_METRIC = "e"        # Euclidian, PyCluster
+FONTSIZE = 8
+DEFAULT_SCALE = "90%" 
+DEFAULT_EXTEND = 5000
+DEFAULT_PERCENTILE = 99
+DEFAULT_CLUSTERING = "none"
+DEFAULT_BG = "white"
+DEFAULT_DYN_EXTEND = 5000
+
+######## BANDPLOT #############
+# Sizes of the plots (in inches)
+PLOTWIDTH = 0.6
+PLOTHEIGHT = 0.6
+PAD = 0.05
+PADLEFT = 1.5                        # For labels
+PADTOP = 0.4                         # For labels
+PADBOTTOM = 0.05
+PADRIGHT = 0.05
+FONTSIZE = 8
+BINS = 100                                # Number of bins for profile
+
+######## PROFILE #############
+BACKGROUNDS = ["white", "stripes", "color"]
+FRAGMENTLENGTH = 200
